# cmdb_watch_service

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
src/cmdb_watch/: README.md  asgi.py  settings.py  urls.py  wsgi.py
src/cmdb_watch/application/: watch_service.py
src/cmdb_watch/application/handlers/: base.py  email_handler.py
src/cmdb_watch/domain/entities/: watcher.py
src/cmdb_watch/domain/events/: base.py  event.py
src/cmdb_watch/domain/services/: eamil_sender_service.py  email_notification_service.py  local_notification_service.py  notification_service.py  watcher_service.py  watcher_service_impl.py
src/cmdb_watch/infrastructure/: watch_client.py  watch_client_impl.py  watcher_repository.py  watcher_repository_impl.py
src/cmdb_watch/infrastructure/email/: email_client.py
src/cmdb_watch/infrastructure/notification/: email_handler.py
src/cmdb_watch/shared/: event_bus.py
tests/: test_email_client.py  test_tmp.py
