# ==============================
# Poetry 项目配置
# ==============================

[tool.poetry]

# 项目名称
name = "cmdb_watch"

# 当前版本
version = "0.1.0"

# 项目描述
description = "Blueking CMDB cmdb_watch"

# 作者
authors = ["Tong Qing"]

# 指定 src 目录作为代码根目录
packages = [
    { include = "cmdb_watch", from = "src" }
]


# ==============================
# 项目依赖
# ==============================

[tool.poetry.dependencies]

python = "^3.11"

# 配置管理
python-dotenv = "^1.0"

# 数据验证
pydantic = "^2.7"


# ==============================
# 开发依赖
# ==============================

[tool.poetry.group.dev.dependencies]

pytest = "^8.2"

black = "^24.4"

ruff = "^0.4"

pre-commit = "^3.7"


# ==============================
# Black 配置
# ==============================

[tool.black]

line-length = 88


# ==============================
# Ruff 配置
# ==============================

[tool.ruff]

line-length = 88


# ==============================
# Python打包系统
# ==============================

[build-system]

requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"